[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui-components/transfers/contract-offer/ContractOffer.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[node name="ContractOffer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="."]
margin_left = 312.0
margin_top = 96.0
margin_right = 1736.0
margin_bottom = 408.0
text = "PLAPLAPALPALALAPLAPLAPLAPLAPALPALPALPALPAL"

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 224.0
margin_top = 408.0
margin_right = 1807.0
margin_bottom = 792.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncomeLabel" type="Label" parent="GridContainer"]
margin_right = 765.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "PRICE"

[node name="IncomeLess" type="Button" parent="GridContainer"]
margin_left = 769.0
margin_right = 788.0
margin_bottom = 56.0
text = "-"

[node name="Income" type="Label" parent="GridContainer"]
margin_left = 792.0
margin_right = 1557.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "0"
align = 1

[node name="IncomeMore" type="Button" parent="GridContainer"]
margin_left = 1561.0
margin_right = 1583.0
margin_bottom = 56.0
text = "+"

[node name="YearsLabel" type="Label" parent="GridContainer"]
margin_top = 60.0
margin_right = 765.0
margin_bottom = 116.0
size_flags_horizontal = 3
text = "YEAR"

[node name="YearsLess" type="Button" parent="GridContainer"]
margin_left = 769.0
margin_top = 60.0
margin_right = 788.0
margin_bottom = 116.0
text = "-"

[node name="Years" type="Label" parent="GridContainer"]
margin_left = 792.0
margin_top = 60.0
margin_right = 1557.0
margin_bottom = 116.0
size_flags_horizontal = 3
text = "0"
align = 1

[node name="YearsMore" type="Button" parent="GridContainer"]
margin_left = 1561.0
margin_top = 60.0
margin_right = 1583.0
margin_bottom = 116.0
text = "+"

[node name="BuyClauseLabel" type="Label" parent="GridContainer"]
margin_top = 120.0
margin_right = 765.0
margin_bottom = 176.0
size_flags_horizontal = 3
text = "BUY_CLAUSE"

[node name="BuyClauseLess" type="Button" parent="GridContainer"]
margin_left = 769.0
margin_top = 120.0
margin_right = 788.0
margin_bottom = 176.0
text = "-"

[node name="BuyClause" type="Label" parent="GridContainer"]
margin_left = 792.0
margin_top = 120.0
margin_right = 1557.0
margin_bottom = 176.0
size_flags_horizontal = 3
text = "0"
align = 1

[node name="BuyClauseMore" type="Button" parent="GridContainer"]
margin_left = 1561.0
margin_top = 120.0
margin_right = 1583.0
margin_bottom = 176.0
text = "+"

[node name="Confirm" type="Button" parent="."]
margin_left = 1152.0
margin_top = 824.0
margin_right = 1345.0
margin_bottom = 880.0
text = "CONFIRM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="."]
margin_left = 680.0
margin_top = 824.0
margin_right = 873.0
margin_bottom = 880.0
text = "CANCEL"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GridContainer/IncomeLess" to="." method="_on_IncomeLess_pressed"]
[connection signal="pressed" from="GridContainer/IncomeMore" to="." method="_on_IncomeMore_pressed"]
[connection signal="pressed" from="GridContainer/YearsLess" to="." method="_on_YearsLess_pressed"]
[connection signal="pressed" from="GridContainer/YearsMore" to="." method="_on_YearsMore_pressed"]
[connection signal="pressed" from="GridContainer/BuyClauseLess" to="." method="_on_BuyClauseLess_pressed"]
[connection signal="pressed" from="GridContainer/BuyClauseMore" to="." method="_on_BuyClauseMore_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_Cancel_pressed"]
